Fixed size of player name input on Mobile

--- a/src/components/Pitch.css
+++ b/src/components/Pitch.css
@@ -157,12 +157,12 @@
     .player-input {
     font-size: 8px !important;
     padding: 1px 2px !important;
-    line-height: 14px !important;       
-    width: 50% !important;             
+    line-height: 14px !important;
+    max-width: 55px !important;                
   }
 
     .player-input-wrapper {
-    left: calc(var(--left-pos) + 10px) !important;
+    left: calc(var(--left-pos) - 12px) !important;
     top: calc(var(--top-pos) - 25px) !important;
   }
   .sub-input {
